# formwise

./: .pre-commit-config.yaml  README.md
.github/workflows/: backend-ci.yml
backend/: .codecov.yml  .env.example  pyproject.toml  requirements.txt
backend/src/: dependencies.py  main.py
backend/src/config/: logging_config.py  settings.py
backend/src/exceptions/: __init__.py  handler.py
backend/src/middlewares/: __init__.py  rate_limit.py
backend/src/models/: __init__.py  auth.py  dashboard.py  field.py  form.py  user.py
backend/src/routers/: __init__.py  auth.py  dashboard.py  form.py  user.py
backend/src/tests/: conftest.py  data.py  helpers.py  test_main.py
backend/src/tests/json/forms/: duplicate_field_tags.json  form.json  form_constraints.json  form_duplicate_field_tags.json  form_single_field.json
backend/src/tests/middlewares/: test_rate_limit.py
backend/src/tests/models/: test_field.py  test_form.py  test_user.py
backend/src/tests/routers/: test_auth.py  test_config.py  test_form.py  test_user.py
backend/src/tests/utils/: test_form_generation.py  test_security.py
backend/src/utils/: __init__.py  custom_types.py  form_generation.py  security.py  types.py
frontend/: .env.local.example  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  not-found.tsx  page.tsx
frontend/app/(auth)/google-callback/: page.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(console)/dashboard/: page.tsx
frontend/app/(console)/forms/[formId]/: page.tsx
frontend/app/(submission)/f/[formId]/: page.tsx
frontend/app/(submission)/success/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/f/[formId]/: page.tsx
frontend/app/google-callback/: page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/components/: home-page.tsx  icons.tsx  logo.tsx  theme-toggle.tsx
frontend/components/auth/: auth-card.tsx  auth-guard.tsx  google-auth-button.tsx  login-form.tsx  register-form.tsx  user-menu.tsx  user-profile.tsx
frontend/components/console/: index.tsx
frontend/components/dashboard/: form-card.tsx  form-create.tsx  form-delete.tsx  forms.tsx
frontend/components/form/: form-editor.tsx  form-responses.tsx  form-view.tsx  formwise.tsx
frontend/components/layout/: footer.tsx  header.tsx  loader.tsx  logo.tsx
frontend/config/: api-urls.ts  site.ts
frontend/hooks/: use-auth.ts  use-config.ts  use-forms.ts
frontend/lib/: api.ts  auth.ts  cookies.ts  schemas.ts  types.ts  utils.ts
frontend/lib/services/: auth.ts  config.ts  form.ts  token.ts
frontend/providers/: auth-provider.tsx  config-provider.tsx  forms-provider.tsx  index.tsx  query-provider.tsx
frontend/types/: auth.ts  config.ts  field.ts  form.ts
