[project]
name = "formwise"
version = "0.1.0"
description = "A FastAPI backend for Formwise, enabling AI-powered form creation with Groq LLM."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgi-correlation-id>=4.3.4",
    "beanie[srv]>=1.27.0",
    "fastapi-sso>=0.17.0",
    "fastapi[standard]>=0.115.3",
    "langchain>=0.3.9",
    "langchain-community>=0.3.8",
    "langchain-groq>=0.2.1",
    "logfire[fastapi,pymongo]>=2.1.2",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.6.0",
    "pyjwt>=2.9.0",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "ruff>=0.7.1",
    "faker>=30.8.1",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.1",
    "pytest-sugar>=1.0.0",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "C",  # flake8-comprehensions
    "SIM",  # flake8-simplify
    "I",  # isort
]

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
addopts = "-n 4 --cov=src --cov-report=html"
filterwarnings = [
    "ignore::DeprecationWarning",
]
